     * Previous versions gave OpenFlow tables default names of the form
       "table#".  These are not helpful names for the purpose of accepting
       and displaying table names, so now tables by default have no names.
     * The "null" interface type, deprecated since 2013, has been removed.
     * Add minimum network namespace support for Linux.
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
   - OpenFlow:
     * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
   - Linux kernel 4.14
     * Add support for compiling OVS with the latest Linux 4.14 kernel
   - ovn:
     * implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
       and reply with a RST for TCP or ICMPv4/ICMPv6 unreachable message for
       other IPv4/IPv6-based protocols whenever a reject ACL rule is hit.
     * ACL match conditions can now match on Port_Groups as well as address
       sets that are automatically generated by Port_Groups.

v2.9.0 - 19 Feb 2018
--------------------
   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
     * Add ttl field.
     * Add a new action dec_nsh_ttl.
     * Enable NSH support in kernel datapath.
   - OVSDB has new, experimental support for database clustering:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-server now supports online schema conversion via
       "ovsdb-client convert".
     * ovsdb-server now always hosts a built-in database named _Server.  See
       ovsdb-server(5) for more details.
     * ovsdb-client: New "get-schema-cksum", "query", "backup", "restore",