@@ -7,6 +7,7 @@ Post-v2.9.0
        and displaying table names, so now tables by default have no names.
      * The "null" interface type, deprecated since 2013, has been removed.
      * Add minimum network namespace support for Linux.
+     * New command "lacp/show-stats"
    - ovs-ofctl:
      * ovs-ofctl now accepts and display table names in place of numbers.  By
        default it always accepts names and in interactive use it displays them;
